--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,16 +1,15 @@
 
 server {
-	#listen 8080;
-	server_name evtouradmin.cnic.cn;
-	access_log /var/log/nginx/vmmanager2-access.log;
-	error_log /var/log/nginx/vmmanager2-error.log;
+	server_name server_name;
+	access_log /var/log/nginx/evcloud-access.log;
+	error_log /var/log/nginx/evcloud-error.log;
 	location / { 
-		root  /root/run/vmmanager2/;
+		root  /path-to-project/;
 		uwsgi_pass 127.0.0.1:3033;
 		include uwsgi_params;
 	}
 	location /static/ {      
-        root /root/run/vmmanager2/; 
+        root /path-to-project/; 
 		expires 24h;
 	    access_log   off;
     }
