--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,15 +1,15 @@
 
 server {
-	server_name server_name;
+	server_name vm.cnic.cn;
 	access_log /var/log/nginx/evcloud-access.log;
 	error_log /var/log/nginx/evcloud-error.log;
 	location / { 
-		root  /path-to-project/;
-		uwsgi_pass 127.0.0.1:3033;
+		root  /project-path/;
+		uwsgi_pass xxxxxxxxxxx;
 		include uwsgi_params;
 	}
 	location /static/ {      
-        root /path-to-project/; 
+        root /project-path/; 
 		expires 24h;
 	    access_log   off;
     }
