--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "==2.2.*"
 mysqlclient = "*"
+djangorestframework = "==3.10.3"
+django-rest-swagger = "==2.2.0"
 
 [requires]
 python_version = "3.6"
