--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ MarkupSafe==1.1.1
 mysqlclient==1.4.4
 openapi-codec==1.3.2
 pytz==2019.3
+rados==2.0.0
+rbd==2.0.0
 requests==2.22.0
 simplejson==3.16.0
 sqlparse==0.3.0
