--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ mysqlclient = "*"
 djangorestframework = "==3.10.3"
 django-rest-swagger = "==2.2.0"
 libvirt-python = "==5.7.0"
+websockify = "==0.9.*"
 
 [requires]
 python_version = "3.6"
