--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.10.3
 libvirt-python==5.7.0
 MarkupSafe==1.1.1
 mysqlclient==1.4.4
+numpy==1.17.2
 openapi-codec==1.3.2
 pytz==2019.3
 requests==2.22.0
@@ -18,3 +19,4 @@ simplejson==3.16.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.25.6
+websockify==0.9.0
