--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,16 @@ coreschema==0.0.4
 Django==2.2.6
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
+djangorestframework-simplejwt==4.3.0
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.3
 libvirt-python==5.7.0
 MarkupSafe==1.1.1
 mysqlclient==1.4.4
-numpy==1.17.2
+numpy==1.17.3
 openapi-codec==1.3.2
+PyJWT==1.7.1
 pytz==2019.3
 requests==2.22.0
 simplejson==3.16.0
