--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ certifi==2019.9.11
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-Django==2.2.6
+Django==2.2.7
+django-debug-toolbar==2.0
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
@@ -11,8 +12,8 @@ itypes==1.1.0
 Jinja2==2.10.3
 libvirt-python==5.7.0
 MarkupSafe==1.1.1
-mysqlclient==1.4.4
-numpy==1.17.3
+mysqlclient==1.4.5
+numpy==1.17.4
 openapi-codec==1.3.2
 PyJWT==1.7.1
 pytz==2019.3
