--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ libvirt-python = "==5.7.0"
 websockify = "==0.9.*"
 djangorestframework-simplejwt = "==4.3.*"
 django-debug-toolbar = "==2.*"
+uwsgi = "*"
 
 [requires]
 python_version = "3.6"
