--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.7
-django-debug-toolbar==2.0
+django-debug-toolbar==2.1
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
@@ -12,14 +12,15 @@ itypes==1.1.0
 Jinja2==2.10.3
 libvirt-python==5.7.0
 MarkupSafe==1.1.1
-mysqlclient==1.4.5
+mysqlclient==1.4.6
 numpy==1.17.4
 openapi-codec==1.3.2
 PyJWT==1.7.1
 pytz==2019.3
 requests==2.22.0
-simplejson==3.16.0
+simplejson==3.17.0
 sqlparse==0.3.0
 uritemplate==3.0.0
-urllib3==1.25.6
+urllib3==1.25.7
+uWSGI==2.0.18
 websockify==0.9.0
