--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -23,7 +23,7 @@ wsgi-file = django_site/wsgi.py
 pidfile = %(chdir)/uwsgi-master.pid
 
 # 存储log日志
-;daemonize = /var/log/%(project_name)/uwsgi.log
+daemonize = /var/log/%(project_name)/uwsgi.log
 
 #以固定的文件大小（单位KB），切割日志文件。 例如：log-maxsize = 50000000  就是50M一个日志文件
 log-maxsize = 50000000
