用drf-yasg生成api文档

--- a/Pipfile
+++ b/Pipfile
@@ -9,12 +9,12 @@ verify_ssl = true
 django = "==2.2.*"
 mysqlclient = "*"
 djangorestframework = "==3.10.3"
-django-rest-swagger = "==2.2.0"
 libvirt-python = "==5.7.0"
 websockify = "==0.9.*"
 djangorestframework-simplejwt = "==4.3.*"
 django-debug-toolbar = "==2.*"
 uwsgi = "*"
+drf-yasg = "==1.17.*"
 
 [requires]
 python_version = "3.6"
