--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,31 @@ certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-Django==2.2.8
+Django==2.2.9
 django-debug-toolbar==2.1
-django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
+drf-yasg==1.17.0
 idna==2.8
+inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10.3
 libvirt-python==5.7.0
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
-numpy==1.17.4
+numpy==1.18.1
 openapi-codec==1.3.2
+packaging==20.0
 PyJWT==1.7.1
+pyparsing==2.4.6
 pytz==2019.3
 requests==2.22.0
+ruamel.yaml==0.16.6
+ruamel.yaml.clib==0.2.0
 simplejson==3.17.0
+six==1.14.0
 sqlparse==0.3.0
-uritemplate==3.0.0
+uritemplate==3.0.1
 urllib3==1.25.7
 uWSGI==2.0.18
 websockify==0.9.0
