--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "==2.2.*"
+django = "==2.2.10"
 mysqlclient = "*"
 djangorestframework = "==3.10.3"
 libvirt-python = "==5.7.0"
