vm迁移过程修改

--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -39,7 +39,8 @@
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             # VNC connection timeout
-            proxy_read_timeout 60s;
+            # proxy_read_timeout 60s;
+            proxy_read_timeout 300s;
             # Disable cache
             proxy_buffering off;
         }
