创建虚拟机视图和html修改

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
 project_base = /home/uwsgi
-project_name = evcloud_dev
+project_name = evcloud
 
 #uwsgi的对外socket接口，nginx将通过该接口与uwsgi做数据交换，因为与nginx同在一个服务器内，不需要在防火墙上对端口8090做访问许可
 # socket = 0:8001
@@ -23,7 +23,7 @@ wsgi-file = django_site/wsgi.py
 pidfile = %(chdir)/uwsgi-master.pid
 
 # 存储log日志
-daemonize = /var/log/%(project_name)/uwsgi.log
+daemonize = /var/log/nginx/%(project_name)_uwsgi.log
 
 #以固定的文件大小（单位KB），切割日志文件。 例如：log-maxsize = 50000000  就是50M一个日志文件
 log-maxsize = 50000000
