配置nginx，添加vpn相关静态文件下载

--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -44,5 +44,13 @@
             # Disable cache
             proxy_buffering off;
         }
+        location  /download {
+            alias  /var/www/downloads/;
+            autoindex on;             # 开启目录文件列表
+            autoindex_exact_size off; # on显示文件确切大小，单位bytes ,若off则显示MB，GB等单位；
+            autoindex_localtime on;   # 开启以服务器本地时区显示文件修改日期！
+            allow all;
+        }
     }
+    
 
