--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -16,8 +16,12 @@
         ''      close;
     }
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
+        listen       80       default_server;
+        listen       [::]:80  default_server;
+        listen       443      default_server ssl;
+        listen       [::]:443 default_server ssl;
+        ssl_certificate      /etc/nginx/conf.d/ssl-cstcloud.crt;
+        ssl_certificate_key  /etc/nginx/conf.d/ssl-cstcloud.key;
         server_name  _;
         location /  {
             proxy_pass http://127.0.0.1:85;
