--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,15 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "==2.2.17"
-mysqlclient = "*"
-djangorestframework = "==3.10.3"
-libvirt-python = "==5.7.0"
+django = "==3.2.*"
+mysqlclient = "==2.0.3"
+djangorestframework = "==3.12.4"
+libvirt-python = "==7.0.0"
 websockify = "==0.9.*"
 djangorestframework-simplejwt = "==4.3.*"
 django-debug-toolbar = "==2.*"
-uwsgi = "*"
-drf-yasg = "==1.17.*"
+uwsgi = "==2.0.19.1"
+drf-yasg = "==1.20.0"
 pyjwt = "==1.7.1"
 
 [requires]
