--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -1,15 +1,14 @@
-    #ln -s /home/uwsgi/evcloud/django_site/nginx_evcloud.conf /etc/opt/rh/rh-nginx114/nginx/conf.d/evcloud.conf
-    #/opt/rh/rh-nginx114/root/usr/sbin/nginx -t
-    #systemctl restart rh-nginx114-nginx
     #ln -s /home/uwsgi/evcloud/django_site/nginx_evcloud.conf /etc/nginx/conf.d/evcloud.conf
     client_max_body_size 1024m;
     types_hash_bucket_size 2048;
     server_names_hash_max_size 512;
     server_names_hash_bucket_size 128;
+    upstream evcloud_django {
+        server 127.0.0.1:85;
+    }
     upstream websockify {
         #ip_hash;
         server 127.0.0.1:84;
-        #server 159.226.50.123:80 backup;
     }
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -20,16 +19,33 @@
         listen       [::]:80  default_server;
         listen       443      default_server ssl;
         listen       [::]:443 default_server ssl;
-        ssl_certificate      /etc/nginx/conf.d/ssl-cstcloud.crt;
-        ssl_certificate_key  /etc/nginx/conf.d/ssl-cstcloud.key;
+        ssl_certificate      /etc/nginx/conf.d/ssl/ssl-cstcloud.crt;
+        ssl_certificate_key  /etc/nginx/conf.d/ssl/ssl-cstcloud.key;
         server_name  _;
         location /  {
-            proxy_pass http://127.0.0.1:85;
+            proxy_pass http://evcloud_django;
             proxy_redirect off;
             proxy_buffering off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            allow 127.0.0.1;
+            allow 10.0.0.0/8;
+            allow 192.168.0.0/16;
+            allow 159.226.235.0/24;
+            allow 159.226.91.0/24;
+            allow 223.193.2.0/24;
+            allow all;
+            deny all;
+        }
+        location /novnc/  {
+            proxy_pass http://evcloud_django;
+            proxy_redirect off;
+            proxy_buffering off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            allow all;
         }
         location /novnc_nginx {  #novnc使用，相关网页文件
             index vnc.html;
