支持spice远程控制台

--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -50,7 +50,7 @@
         location /novnc_nginx {  #novnc使用，相关网页文件
             index vnc.html;
             #alias /usr/share/novnc;
-            alias /var/www/novnc;
+            alias /var/www/console;
             try_files $uri $uri/ /vnc.html;
         }
         location /websockify {  #novnc使用，websockify反向代理
