vm sys disk expand view

--- a/django_site/nginx_evcloud.conf
+++ b/django_site/nginx_evcloud.conf
@@ -17,10 +17,10 @@
     server {
         listen       80       default_server;
         listen       [::]:80  default_server;
-        listen       443      default_server ssl;
-        listen       [::]:443 default_server ssl;
-        ssl_certificate      /etc/nginx/conf.d/ssl/ssl-cstcloud.crt;
-        ssl_certificate_key  /etc/nginx/conf.d/ssl/ssl-cstcloud.key;
+#         listen       443      default_server ssl;
+#         listen       [::]:443 default_server ssl;
+#         ssl_certificate      /etc/nginx/conf.d/ssl/ssl-cstcloud.crt;
+#         ssl_certificate_key  /etc/nginx/conf.d/ssl/ssl-cstcloud.key;
         server_name  _;
         location /  {
             proxy_pass http://evcloud_django;
