--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,33 @@
 asgiref==3.4.1
-certifi==2021.5.30
+certifi==2022.5.18.1
 chardet==4.0.0
+charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.2.5
+Django==3.2.13
 django-debug-toolbar==2.2.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.3.0
 drf-yasg==1.20.0
-idna==2.10
+idna==3.3
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.0.1
+Jinja2==3.0.3
 libvirt-python==7.0.0
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
 numpy==1.19.5
-packaging==21.0
+packaging==21.3
 PyJWT==1.7.1
-pyparsing==2.4.7
-pytz==2021.1
-requests==2.25.1
-ruamel.yaml==0.17.10
+pyparsing==3.0.9
+pytz==2022.1
+requests==2.27.1
+ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 six==1.16.0
-sqlparse==0.4.1
-typing-extensions==3.10.0.0
-uritemplate==3.0.1
-urllib3==1.26.6
-uWSGI==2.0.19.1
+sqlparse==0.4.2
+typing-extensions==4.1.1
+uritemplate==4.1.1
+urllib3==1.26.9
+uWSGI==2.0.20
 websockify==0.9.0
