基于CentOS9, 升级到Python3.9，及依赖包升级

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,32 @@
-asgiref==3.4.1
-certifi==2022.5.18.1
-chardet==4.0.0
+asgiref==3.5.2
+certifi==2022.6.15
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.13
-django-debug-toolbar==2.2.1
-djangorestframework==3.12.4
-djangorestframework-simplejwt==4.3.0
+django-debug-toolbar==3.5.0
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.0.3
-libvirt-python==7.0.0
-MarkupSafe==2.0.1
-mysqlclient==2.0.3
-numpy==1.19.5
+Jinja2==3.1.2
+libvirt-python==8.4.0
+MarkupSafe==2.1.1
+mysqlclient==2.1.0
+numpy==1.23.0
 packaging==21.3
-PyJWT==1.7.1
+PyJWT==2.4.0
 pyparsing==3.0.9
 pytz==2022.1
-requests==2.27.1
+rados==2.0.0
+rbd==2.0.0
+requests==2.28.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
-six==1.16.0
 sqlparse==0.4.2
-typing-extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.9
 uWSGI==2.0.20
-websockify==0.9.0
+websockify==0.10.0
