--- a/Pipfile
+++ b/Pipfile
@@ -7,15 +7,15 @@ verify_ssl = true
 
 [packages]
 django = "==3.2.13"
-mysqlclient = "==2.0.3"
-djangorestframework = "==3.12.4"
-libvirt-python = "==7.0.0"
-websockify = "==0.9.*"
-djangorestframework-simplejwt = "==4.3.*"
-django-debug-toolbar = "==2.*"
+mysqlclient = "==2.1.0"
+djangorestframework = "==3.13.1"
+libvirt-python = "==8.4.0"
+websockify = "==0.10.0"
+djangorestframework-simplejwt = "==5.2.0"
+django-debug-toolbar = "==3.5.0"
 uwsgi = "==2.0.20"
 drf-yasg = "==1.20.0"
-pyjwt = "==1.7.1"
+pyjwt = "==2.4.0"
 
 [requires]
-python_version = "3.6"
+python_version = "3.9"
