--- a/Pipfile
+++ b/Pipfile
@@ -6,16 +6,18 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "==3.2.13"
+django = "==4.2.5"
 mysqlclient = "==2.1.0"
-djangorestframework = "==3.13.1"
-libvirt-python = "==8.4.0"
+djangorestframework = "==3.14.0"
+libvirt-python = "==9.3.0"
 websockify = "==0.10.0"
 djangorestframework-simplejwt = "==5.2.0"
 django-debug-toolbar = "==3.5.0"
 uwsgi = "==2.0.20"
-drf-yasg = "==1.20.0"
+drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
+coreapi = "==2.3.3"
+requests = "==2.28.0"
 
 [requires]
 python_version = "3.9"
