--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-asgiref==3.5.2
-certifi==2022.6.15
+asgiref==3.7.2
+certifi==2023.7.22
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.2.13
+Django==4.2.5
 django-debug-toolbar==3.5.0
-djangorestframework==3.13.1
+djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.0
-drf-yasg==1.20.0
-idna==3.3
+drf-yasg==1.21.7
+idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
-MarkupSafe==2.1.1
+MarkupSafe==2.1.3
 mysqlclient==2.1.0
-packaging==21.3
+numpy==1.26.0
+packaging==23.2
 PyJWT==2.4.0
-pyparsing==3.0.9
-pytz==2022.1
+pytz==2023.3.post1
+PyYAML==6.0.1
 requests==2.28.0
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-sqlparse==0.4.2
+sqlparse==0.4.4
+typing_extensions==4.8.0
 uritemplate==4.1.1
-urllib3==1.26.9
+urllib3==1.26.17
 uWSGI==2.0.20
 websockify==0.10.0
