依赖包版本统一

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ djangorestframework = "==3.14.0"
 libvirt-python = "==9.3.0"
 websockify = "==0.10.0"
 djangorestframework-simplejwt = "==5.2.0"
-django-debug-toolbar = "==3.5.0"
+django-debug-toolbar = "*"
 uwsgi = "==2.0.20"
 drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
