--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
 coreapi = "==2.3.3"
 requests = "==2.28.0"
+django-tidb = "==4.2.3"
 
 [requires]
 python_version = "3.9"
