--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
 asgiref==3.7.2
-certifi==2023.7.22
+certifi==2023.11.17
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2.5
 django-debug-toolbar==4.2.0
+django-tidb==4.2.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.7
-idna==3.4
+idna==3.6
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mysqlclient==2.1.0
-numpy==1.26.1
+numpy==1.26.2
 packaging==23.2
 PyJWT==2.4.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.28.0
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
 sqlparse==0.4.4
 typing_extensions==4.8.0
 uritemplate==4.1.1
