--- a/00_script/depend/Pipfile
+++ b/00_script/depend/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "==4.2.8"
+django = "==4.2.9"
 mysqlclient = "==2.1.0"
 djangorestframework = "==3.14.0"
 #libvirt-python = "==9.3.0"    # 不适用于 pip 安装， 通过 dnf install python3-libvirt.x86_64
@@ -17,9 +17,10 @@ uwsgi = "==2.0.20"
 drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
 coreapi = "==2.3.3"
-requests = "==2.28.0"
+requests = "==2.31.0"
 django-tidb = "==4.2.3"
 func-timeout = "==4.3.5"
+uwsgitop = "==0.12"
 
 [requires]
 python_version = "3.9"
