--- a/00_script/depend/requirements.txt
+++ b/00_script/depend/requirements.txt
@@ -1,9 +1,9 @@
-asgiref==3.7.2
-certifi==2023.11.17
-charset-normalizer==2.0.12
+asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 coreapi==2.3.3
 coreschema==0.0.4
-Django==4.2.8
+Django==4.2.9
 django-debug-toolbar==3.5.0
 django-tidb==4.2.3
 djangorestframework==3.14.0
@@ -13,20 +13,19 @@ func-timeout==4.3.5
 idna==3.6
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 mysqlclient==2.1.0
-numpy==1.26.2
-packaging==23.2
+numpy==1.26.4
+packaging==24.0
 PyJWT==2.4.0
-pytz==2023.3.post1
+pytz==2024.1
 PyYAML==6.0.1
-requests==2.28.0
-ruamel.yaml==0.18.5
-ruamel.yaml.clib==0.2.8
+requests==2.31.0
 sqlparse==0.4.4
-typing_extensions==4.9.0
+typing_extensions==4.11.0
 uritemplate==4.1.1
-urllib3==1.26.18
+urllib3==2.2.1
 uWSGI==2.0.20
+uwsgitop==0.12
 websockify==0.10.0
