依赖包更新

--- a/00_script/depend/Pipfile
+++ b/00_script/depend/Pipfile
@@ -17,7 +17,7 @@ uwsgi = "==2.0.20"
 drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
 coreapi = "==2.3.3"
-requests = "==2.31.0"
+#requests = "==2.31.0"
 django-tidb = "==4.2.3"
 func-timeout = "==4.3.5"
 uwsgitop = "==0.12"
