--- a/00_script/depend/requirements.txt
+++ b/00_script/depend/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
+concurrent-log-handler==0.9.19
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2.9
+django-admin-model-list-order==0.0.4
 django-debug-toolbar==3.5.0
 django-tidb==4.2.3
 djangorestframework==3.14.0
@@ -13,19 +15,20 @@ func-timeout==4.3.5
 idna==3.7
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.1.3
+Jinja2==3.1.4
 MarkupSafe==2.1.5
 mysqlclient==2.1.0
-numpy==1.26.4
-packaging==24.0
+numpy==2.0.0
+packaging==24.1
+portalocker==2.10.0
 PyJWT==2.4.0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 sqlparse==0.5.0
-typing_extensions==4.11.0
+typing_extensions==4.12.2
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3==2.2.2
 uWSGI==2.0.20
 uwsgitop==0.12
 websockify==0.10.0
