--- a/00_script/depend/requirements.txt
+++ b/00_script/depend/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
-certifi==2024.6.2
-charset-normalizer==3.3.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 concurrent-log-handler==0.9.19
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==37.0.4
 Django==4.2.9
 django-admin-model-list-order==0.0.4
 django-debug-toolbar==3.5.0
@@ -12,23 +14,24 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.7
 func-timeout==4.3.5
-idna==3.7
+idna==3.10
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.4
-MarkupSafe==2.1.5
+MarkupSafe==3.0.1
 mysqlclient==2.1.0
-numpy==2.0.0
+numpy==2.0.2
 packaging==24.1
-portalocker==2.10.0
+portalocker==2.10.1
+pycparser==2.22
 PyJWT==2.4.0
-pytz==2024.1
-PyYAML==6.0.1
+pytz==2024.2
+PyYAML==6.0.2
 requests==2.31.0
-sqlparse==0.5.0
+sqlparse==0.5.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
-urllib3==2.2.2
+urllib3==2.2.3
 uWSGI==2.0.20
 uwsgitop==0.12
 websockify==0.10.0
