--- a/00_script/depend/Pipfile
+++ b/00_script/depend/Pipfile
@@ -12,7 +12,7 @@ djangorestframework = "==3.14.0"
 #libvirt-python = "==9.3.0"    # 不适用于 pip 安装， 通过 dnf install python3-libvirt.x86_64
 websockify = "==0.10.0"
 djangorestframework-simplejwt = "==5.2.0"
-django-debug-toolbar = "3.5.0"
+django-debug-toolbar = "==3.5.0"
 uwsgi = "==2.0.20"
 drf-yasg = "==1.21.7"
 pyjwt = "==2.4.0"
@@ -23,6 +23,7 @@ func-timeout = "==4.3.5"
 uwsgitop = "==0.12"
 concurrent-log-handler = "==0.9.19"
 cryptography = "==37.0.4"
+django-cors-headers = "==3.7.0"
 
 [requires]
 python_version = "3.9"
